# mango-tango

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: init.rs  main.rs
src/adapters/: discord.rs  youtube.rs
src/commands/: join.rs  mod.rs  play_link.rs  search.rs  skip.rs
src/helpers/: anxious_reply.rs  get_queue.rs  join_channel.rs  mod.rs  search_state.rs  track_end_handler.rs
src/lifecycle/: idle.rs  mod.rs  status.rs
src/middleware/: idle.rs
src/slash_commands/: join.rs  mod.rs  ping.rs  play_link.rs  search.rs  skip.rs  status.rs
